# tracker

./: config.h.meson.in  meson.build  meson_options.txt
docs/reference/: meson.build
docs/reference/libtracker-control/: meson.build
docs/reference/libtracker-miner/: meson.build
docs/reference/libtracker-sparql/: meson.build
docs/reference/ontology/: meson.build
examples/libtracker-miner/: meson.build
examples/libtracker-sparql/: meson.build
src/: meson.build
src/libtracker-bus/: meson.build
src/libtracker-common/: meson.build
src/libtracker-control/: meson.build
src/libtracker-data/: meson.build
src/libtracker-direct/: meson.build
src/libtracker-extract/: meson.build
src/libtracker-miner/: meson.build
src/libtracker-sparql/: meson.build
src/libtracker-sparql-backend/: meson.build
src/miners/: meson.build
src/miners/fs/: meson.build
src/miners/rss/: meson.build
src/tracker/: meson.build
src/tracker-needle/: meson.build
tests/functional-tests/ipc/: meson.build
tests/libtracker-data/: meson.build
tests/libtracker-fts/: meson.build
tests/libtracker-miner/: meson.build
utils/tracker-resdump/: meson.build
