# Shared common code
subdir('libtracker-common')

# Intermediate library of RDF & SPARQL helper functions.
# This gets used internally and also becomes part of the
# public libtracker-sparql library.
subdir('libtracker-sparql')

# Internal database library
subdir('gvdb')
subdir('libtracker-fts')
subdir('libtracker-data')

# Public libtracker-sparql library
subdir('libtracker-bus')
subdir('libtracker-direct')
subdir('libtracker-remote')
subdir('libtracker-sparql-backend')

# Internal data extraction helpers
subdir('libtracker-extract')

# Public data extract tool & modules
subdir('tracker-extract')

# Public libtracker-miner library
subdir('libtracker-miner')

# Public miners
subdir('miners')

# Internal control library
subdir('libtracker-control')

# Public commandline control tool
subdir('tracker')

# Example search application
subdir('tracker-needle')
